--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -422,6 +422,95 @@ form.whatsapp-form {
 
 /* ==================================================== */
 
+    .section4{
+        width: 100%;
+        height: 100vh;
+    }
+
+    .sec4-col1{
+        width: 60%;
+        height: 100vh;
+        background-image: url('../img/pengarengan1.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center right;
+        background-attachment: fixed;
+        float: left;
+    }
+
+    .sec4-col2{
+        width: 40%;
+        height: 100vh;
+        float: left;
+    }
+
+    .sec4-col2 h3{
+        font-family: 'Yeseva One', cursive;
+        padding: 15vh 10%;
+        font-size: 50px;
+        color: rgb(15, 15, 15);
+    }
+
+    .sec4-col2 span{
+        color: rgb(255, 0, 0);
+        font-size: 80px;
+    }
+
+
+
+/* ==================================================== */
+
+    .section5{
+        width: 100%;
+        height: 100vh;
+    }
+
+    .sec5-col1{
+        width: 40%;
+        height: 100vh;
+        background-image: url('../img/pengarengan3.jpg');
+        background-position: left;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-attachment: fixed;
+        float: left;    
+    }
+
+    .sec5-col2{
+        width: 30%;
+        height: 100vh;
+        float: left;
+        background-color: #0ea904;
+    }
+
+    .sec5-col2 img{
+        width: 50%;
+        height: 33.3vh;
+        float: left;
+        box-shadow: 1px 1px 10px black;
+        padding: 20px 20px;
+    }
+
+    .sec5-col2 img:hover{
+        background-color: yellow;
+        padding: 30px 30px;
+        transition: 1s;
+    }
+
+    .sec5-col3{
+        width: 30%;
+        height: 100vh;
+        float: left;
+    }
+
+    .sec5-col3 img{
+        width: 100%;
+        height: 33.3vh;
+    }
+
+
+/* ==================================================== */
+
 
 @media screen and (max-width: 768px) {
     .section1{
@@ -664,6 +753,96 @@ form.whatsapp-form {
     }
     
     /* ==================================================== */
+
+    .section4{
+        width: 100%;
+        height: 100vh;
+    }
+
+    .sec4-col1{
+        width: 60%;
+        height: 100vh;
+        background-image: url('../img/pengarengan1.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center right;
+        background-attachment: fixed;
+        float: left;
+    }
+
+    .sec4-col2{
+        width: 40%;
+        height: 100vh;
+        float: left;
+    }
+
+    .sec4-col2 h3{
+        font-family: 'Yeseva One', cursive;
+        padding: 18vh 10%;
+        font-size: 40px;
+        color: rgb(15, 15, 15);
+    }
+
+    .sec4-col2 span{
+        color: rgb(255, 0, 0);
+        font-size: 45px;
+    }
+
+
+
+/* ==================================================== */
+
+    .section5{
+        width: 100%;
+        height: 100vh;
+    }
+
+    .sec5-col1{
+        width: 50%;
+        height: 100vh;
+        background-image: url('../img/pengarengan3.jpg');
+        background-position: left;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-attachment: fixed;
+        float: left;    
+    }
+
+    .sec5-col2{
+        width: 25%;
+        height: 100vh;
+        float: left;
+        background-color: #0ea904;
+    }
+
+    .sec5-col2 img{
+        width: 50%;
+        height: 33.3vh;
+        float: left;
+        box-shadow: 1px 1px 10px black;
+        padding: 50px 20px;
+    }
+
+    .sec5-col2 img:hover{
+        background-color: yellow;
+        padding: 30px 30px;
+        transition: 1s;
+    }
+
+    .sec5-col3{
+        width: 25%;
+        height: 100vh;
+        float: left;
+    }
+
+    .sec5-col3 img{
+        width: 100%;
+        height: 33.3vh;
+    }
+
+
+/* ==================================================== */
+
     
     
 }
@@ -910,6 +1089,93 @@ form.whatsapp-form {
     }
     
     /* ==================================================== */
+
+    .section4{
+        width: 100%;
+        height: 100vh;
+    }
+
+    .sec4-col1{
+        width: 100%;
+        height: 60vh;
+        background-image: url('../img/pengarengan1.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center right;
+        background-attachment: fixed;
+        float: left;
+    }
+
+    .sec4-col2{
+        width: 100%;
+        height: 40vh;
+        float: left;
+    }
+
+    .sec4-col2 h3{
+        font-family: 'Yeseva One', cursive;
+        padding: 5vh 10%;
+        font-size: 30px;
+        color: rgb(15, 15, 15);
+    }
+
+    .sec4-col2 span{
+        color: rgb(255, 0, 0);
+        font-size: 45px;
+    }
+
+/* ==================================================== */
+
+    .section5{
+        width: 100%;
+        height: 200vh;
+    }
+
+    .sec5-col1{
+        width: 100%;
+        height: 100vh;
+        background-image: url('../img/pengarengan3.jpg');
+        background-position: left;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-attachment: fixed;
+        float: left;    
+    }
+
+    .sec5-col2{
+        width: 100%;
+        height: 30vh;
+        float: left;
+        background-color: #0ea904;
+    }
+
+    .sec5-col2 img{
+        width: 33.3%;
+        height: 15vh;
+        float: left;
+        box-shadow: 1px 1px 10px black;
+        padding: 20px 20px;
+    }
+
+    .sec5-col2 img:hover{
+        background-color: yellow;
+        padding: 30px 30px;
+        transition: 1s;
+    }
+
+    .sec5-col3{
+        width: 100%;
+        height: 70vh;
+        float: left;
+    }
+
+    .sec5-col3 img{
+        width: 100%;
+        height: 23.3vh;
+    }
+
+
+/* ==================================================== */
 
     
 }
